--- a/spotreserve/src/template/navegacion2.html
+++ b/spotreserve/src/template/navegacion2.html
@@ -43,13 +43,12 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+    <script> src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-q98yPQOe/QQUmjMa/BlVBXTNFXyq/xi4fpXEDJcvCP4nheL1U/1t6LPs0hAP0T4B"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    <script> src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-QvtknfA66Qa3gDEsKWTEZwM3Af6UAEiJjF3ZZPQ9v8YXKvXKj2P38rKADyD2/XgK"
         crossorigin="anonymous"></script>
 </body>
 </html>
-
 
