--- a/spotreserve/src/template/index.html
+++ b/spotreserve/src/template/index.html
@@ -1,52 +1,91 @@
 {% include 'navegacion.html' %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>SPOTRESERVE - Inicio</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/perrito.ico') }}" />
 
 </head>
+
 <body>
     <div class="header">
         <div class="header-content">
-            <center><h1>SPOTRESERVE</h1></center>
-            
+            <center>
+                <h1>SPOTRESERVE</h1>
+            </center>
+
             <p>
-                Somos un sistema que permite localizar los mejores bares y compartiendo los establecimientos más famosos, encontrando
+                Somos un sistema que permite localizar los mejores bares y compartiendo los establecimientos más
+                famosos, encontrando
                 así los locales, horarios, especialidades. Permitiéndote reservar en línea.
             </p>
             <a href="/obtener_bares">
                 <button type="button" class="btn btn-secondary">¡Reserva aquí!</button>
-            </a>            
-            <br><br><img src="{{ url_for('static', filename='img/perrito.jpg') }}" width="200px" alt="Imagen de perrito">
+            </a>
+
+            <button type="button" class="btn btn-secondary" id="liveToastBtn">Presiona aqui!</button>
+
+            <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <img src="..." class="rounded me-2" alt="...">
+                        <strong class="me-auto">Titulo</strong>
+                        <small>11 mins ago</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        Pop up como dijo
+                    </div>
+                </div>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        // JavaScript to show the toast
+        document.getElementById('liveToastBtn').addEventListener('click', function() {
+            var toastElement = document.getElementById('liveToast');
+            var toast = new bootstrap.Toast(toastElement);
+            toast.show();
+        });
+    </script>
+            <br><br><img src="{{ url_for('static', filename='img/perrito.jpg') }}" width="200px"
+                alt="Imagen de perrito">
         </div>
     </div>
 
     <section class="bares">
         <h1>Los mejores bares de Bogotá aquí encontrarás</h1>
-        
+
 
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <center><img src="{{ url_for('static', filename='img/bares-2.jpg') }}" class="d-block w-50"></center>
+                    <center><img src="{{ url_for('static', filename='img/bares-2.jpg') }}" class="d-block w-50">
+                    </center>
                 </div>
                 <div class="carousel-item">
-                    <center><img src="{{ url_for('static', filename='img/carrusel1.jpg') }}" class="d-block w-50"></center>
+                    <center><img src="{{ url_for('static', filename='img/carrusel1.jpg') }}" class="d-block w-50">
+                    </center>
                 </div>
                 <div class="carousel-item">
-                    <center><img src="{{ url_for('static', filename='img/carrusel2.jpg') }}" class="d-block w-50"></center>
+                    <center><img src="{{ url_for('static', filename='img/carrusel2.jpg') }}" class="d-block w-50">
+                    </center>
                 </div>
                 <div class="carousel-item">
-                    <center><img src="{{ url_for('static', filename='img/carrusel3.jpg') }}" class="d-block w-50"></center>
+                    <center><img src="{{ url_for('static', filename='img/carrusel3.jpg') }}" class="d-block w-50">
+                    </center>
                 </div>
             </div>
         </div>
-        
+
         <br><br><br><br>
         <div class="bares-content container">
             <pre><h2>Top 3 mejores bares para disfrutar en Bogotá</h2></pre>
@@ -55,50 +94,68 @@
         <div class="bares-group container">
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="{{ url_for('static', filename='img/bbc.png') }}" class="card-img-top" alt="Imagen de bar">
-                    <div class="card-body">
-                        <center><h5 class="card-title">Bar la BBC</h5></center>
-                      <p class="card-text">Este bar es reconocido por su excelente cerveza y la calidad que ofrece a sus clientes.</p>
+                    <div class="card h-100">
+                        <img src="{{ url_for('static', filename='img/bbc.png') }}" class="card-img-top"
+                            alt="Imagen de bar">
+                        <div class="card-body">
+                            <center>
+                                <h5 class="card-title">Bar la BBC</h5>
+                            </center>
+                            <p class="card-text">Este bar es reconocido por su excelente cerveza y la calidad que ofrece
+                                a sus clientes.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary"><a target="_blank" href="#">Mas informacion
+                                    aqui</a></small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                      <small class="text-body-secondary"><a target="_blank" href="#">Mas informacion aqui</a></small>
-                    </div>
-                  </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="{{ url_for('static', filename='img/mono.jpeg') }}" class="card-img-top" alt="Imagen de bar">
-                    <div class="card-body">
-                        <center><h5 class="card-title">El Mono Bandido</h5></center>
-                      <p class="card-text">Este bar es reconocido por su excelente cerveza y la calidad que ofrece a sus clientes.</p>
+                    <div class="card h-100">
+                        <img src="{{ url_for('static', filename='img/mono.jpeg') }}" class="card-img-top"
+                            alt="Imagen de bar">
+                        <div class="card-body">
+                            <center>
+                                <h5 class="card-title">El Mono Bandido</h5>
+                            </center>
+                            <p class="card-text">Este bar es reconocido por su excelente cerveza y la calidad que ofrece
+                                a sus clientes.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary"><a target="_blank" href="#">Mas informacion
+                                    aqui</a></small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <small class="text-body-secondary"><a target="_blank" href="#">Mas informacion aqui</a></small>
-                    </div>
-                  </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="{{ url_for('static', filename='img/hooters.png') }}" class="card-img-top" alt="Imagen de bar">
-                    <div class="card-body">
-                        <center><h5 class="card-title">Hooters</h5></center>
-                        <p class="card-text">Este bar es reconocido por su excelente cerveza y la calidad que ofrece a sus clientes.</p>
+                    <div class="card h-100">
+                        <img src="{{ url_for('static', filename='img/hooters.png') }}" class="card-img-top"
+                            alt="Imagen de bar">
+                        <div class="card-body">
+                            <center>
+                                <h5 class="card-title">Hooters</h5>
+                            </center>
+                            <p class="card-text">Este bar es reconocido por su excelente cerveza y la calidad que ofrece
+                                a sus clientes.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-body-secondary"><a target="_blank" href="#">Mas informacion
+                                    aqui</a></small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <small class="text-body-secondary"><a target="_blank" href="#">Mas informacion aqui</a></small>
-                    </div>
-                  </div>
                 </div>
-              </div>
+            </div>
         </div>
 
         <div class="btn-2-container">
             <a href="#">
                 <button type="button" class="btn btn-secondary btn-lg">Mas informacion aqui!</button>
-            </a>            
+            </a>
+
+
+
         </div>
-        
+
     </section>
 
     <footer class="footer">
@@ -117,22 +174,21 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-q98yPQOe/QQUmjMa/BlVBXTNFXyq/xi4fpXEDJcvCP4nheL1U/1t6LPs0hAP0T4B"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-q98yPQOe/QQUmjMa/BlVBXTNFXyq/xi4fpXEDJcvCP4nheL1U/1t6LPs0hAP0T4B" crossorigin="anonymous">
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QvtknfA66Qa3gDEsKWTEZwM3Af6UAEiJjF3ZZPQ9v8YXKvXKj2P38rKADyD2/XgK"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-QvtknfA66Qa3gDEsKWTEZwM3Af6UAEiJjF3ZZPQ9v8YXKvXKj2P38rKADyD2/XgK" crossorigin="anonymous">
+        </script>
     <script>
         // Inicializar el carrusel al cargar la página
         document.addEventListener('DOMContentLoaded', function () {
             var myCarousel = document.querySelector('#carouselExampleSlidesOnly');
             var carousel = new bootstrap.Carousel(myCarousel, {
                 interval: 2000,
-                wrap: true 
+                wrap: true
             });
         });
     </script>
 </body>
+
 </html>
